tests/samples/positive/modules/import_alias_qualified_call.ax
module import_alias_qualified_call;

import samplelib.visibility as vis;

fn main() -> i32 {
    let answer: vis::PublicInt = vis::answer;
    let boxed: vis::PublicBox = vis::make_box(answer);
    if boxed.value != 41 {
        return 1;
    }
    if vis::exported(1) != 42 {
        return 2;
    }
    return 0;
}
